--- a/css/ww.css
+++ b/css/ww.css
@@ -7932,7 +7932,9 @@ input#m-q {
   -ms-transform: translate3d(100%, 0, 0);
   transform: translate3d(100%, 0, 0);
   /* Prevent flicker when tapped on iOS Safari */
-  -webkit-tap-highlight-color: transparent; }
+  -webkit-tap-highlight-color: transparent;
+  /* Prevent shaky animation on iOS Safari; only happens when content is taller than viewport. */
+  overflow-y: hidden; }
 
 /*
  * Scrolling container. Contains both global and local menu containers. 
@@ -8152,6 +8154,7 @@ input#m-q {
 
 .ibm-resize {
   max-width: 100% !important;
+  width: 100% !important;
   height: auto !important; }
 
 a.ibm-thumbnail-module {
